# license-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  old.py  pyproject.toml  test_groq_api.py
app/: main.py
app/api/: routes.py
app/config/: config.py
app/models/: schemas.py  types.py
app/services/: classification_service.py  groq_service.py
app/utils/: csv_parser.py
data/: licenses.csv  output.json
